# sklk-soapyiris

./: BSD-3-CLAUSE-LICENSE.txt  CMakeLists.txt  Changelog.txt  GetAdaptersWindows.cpp  IfAddrsUtils.cpp  IfAddrsUtils.hpp  IfAddrsUtilsWindows.cpp  LICENSE  README.md  iris_device.hpp  iris_formats.cpp  iris_formats.hpp  iris_registration.cpp  iris_settings.cpp  iris_streaming.cpp  twbw_helper.h
SoapyRemoteLibs/: CMakeLists.txt  SoapyRPCSocket.cpp  SoapyRPCSocket.hpp
debian/: changelog  control  copyright
demos/: MIMOGui.py  README.md  lts.py
tests/: CMakeLists.txt  DataFormatsTest.py  IrisFullDuplex.cpp  README.md
utils/: banner  flash_sd_card.sh  install_soapy.sh
